# ttpu_alumni_bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  i18n.py  keyboards.py  main.py  pyproject.toml  requirements.txt  states.py
handlers/: __init__.py  start.py  survey.py
services/: excel_backup.py  google_sheets.py  storage.py
tests/: test_google_sheets.py  test_i18n.py
